--- a/www/views/entity/Study.haml
+++ b/www/views/entity/Study.haml
@@ -81,19 +81,44 @@
             - types.each do |type|
               %dt #{type} drivers
               %dd= study.drivers(type).list_link :length, "#{ type } consensus drivers for #{ entity }"
-- if study.has_drivers? 
-  - entity_card.add_section "Driver network" do
-    - driver_by_type = TSV.setup({}, :fields => ["Ensembl Gene ID"], :key_field => "Driver type", :type => :flat)
-    - all_drivers = Set.new
-    - types = %w(CDS 3UTR  5UTR promCore)
-    - types.each do |type|
-      - driver_by_type[type] ||= []
-      - driver_by_type[type] += study.drivers(type)
-      - all_drivers += driver_by_type[type]
 
-    = graph do |kb|
-      - add_entities Gene.setup(all_drivers.to_a, "Ensembl Gene ID", PCAWG.organism)
+- require 'rbbt/rest/common/tabs'
+- require 'sinatra/entity_graph'
+- entity_card.add_section "Driver network" do
+  - kb = @step.knowledge_base
+  - kb.register "donor_drivers", PCAWG.donor_drivers, :target => "Associated Gene Name=>Ensembl Gene ID"
+  - assocs = kb.subset("donor_drivers", :source => study.donors, :target => :all)
+  - entity_graph = EntityGraph.new
+  - entity_graph.add_associations assocs
+  :deferjs
+    var model=#{entity_graph.model}
+    console.log(model)
 
+
+
+- entity_card.add_section "Driver network" do
+  = tabs do |t|
+    - t.active "Sample"
+    - if study.has_drivers?  and false
+      - t.add "Cohort" do
+        - driver_by_type = TSV.setup({}, :fields => ["Ensembl Gene ID"], :key_field => "Driver type", :type => :flat)
+        - all_drivers = Set.new
+        - types = %w(CDS 3UTR  5UTR promCore)
+        - types.each do |type|
+          - driver_by_type[type] ||= []
+          - driver_by_type[type] += study.drivers(type)
+          - all_drivers += driver_by_type[type]
+
+        = graph do |kb|
+          - add_entities Gene.setup(all_drivers.to_a, "Ensembl Gene ID", PCAWG.organism)
+
+    - t.add "Sample" do
+      - donor_drivers = PCAWG.donor_drivers.tsv(:merge => true, :type => :flat, :fields => ["Associated Gene Name"]).swap_id "Associated Gene Name", "Ensembl Gene ID"
+
+      = graph do |kb|
+        - kb.register "donor_drivers", PCAWG.donor_drivers, :target => "Associated Gene Name=>Ensembl Gene ID"
+        - assocs = kb.subset("donor_drivers", :source => study.donors, :target => :all)
+        - add_associations assocs
 
 - entity_card.action_controller = default_action_controller entity
 
